--- a/.github/ISSUE_TEMPLATE/user-story.yml
+++ b/.github/ISSUE_TEMPLATE/user-story.yml
@@ -1,19 +1,32 @@
-name: "User Story"
-description: "Erstelle eine neue User Story"
-title: "Als [Rolle] möchte ich [Ziel], um [Nutzen]"
+name: User Story
+description: Erstelle eine neue User Story
+title: "[USER STORY] "
 labels: ["user story"]
 body:
   - type: textarea
     id: description
-    label: Beschreibung
-    description: Beschreibe, was der User tun möchte und warum.
+    attributes:
+      label: Beschreibung
+      description: Beschreibe, was der User tun möchte und warum.
+      placeholder: "Als [Rolle] möchte ich [Ziel], um [Nutzen]."
+    validations:
+      required: true
 
   - type: textarea
     id: acceptance
-    label: Akzeptanzkriterien
-    description: Liste die Bedingungen auf, wann die Story als fertig gilt.
+    attributes:
+      label: Akzeptanzkriterien
+      description: Liste die Bedingungen auf, wann die Story als fertig gilt.
+      placeholder: |
+        - [ ] Kriterium 1
+        - [ ] Kriterium 2
+    validations:
+      required: true
 
   - type: textarea
     id: notes
-    label: Notizen
-    description: Optional: Design, technische Hinweise, etc.
+    attributes:
+      label: Notizen
+      description: Optional - Design, technische Hinweise, etc.
+    validations:
+      required: false
