--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,19 +1,34 @@
-- name: Copy artifact to server
-  uses: appleboy/scp-action@v0.1.7
-  with:
-    host:     ${{ secrets.SSH_HOST }}
-    username: ${{ secrets.SSH_USER }}
-    key:      ${{ secrets.SSH_KEY }}
-    port:     ${{ secrets.SSH_PORT }}
-    source:   target/safenet.jar
-    target:   /opt/safenet/safenet.jar
+name: Deploy to Server
 
-- name: Restart service
-  uses: appleboy/ssh-action@v1.2.0
-  with:
-    host:     ${{ secrets.SSH_HOST }}
-    username: ${{ secrets.SSH_USER }}
-    key:      ${{ secrets.SSH_KEY }}
-    script: |
-      sudo systemctl restart safenet
-      sudo systemctl status safenet --no-pager -n 20
+on:
+  push:
+    branches:
+      - main
+
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Copy artifact to server
+        uses: appleboy/scp-action@v0.1.7
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_KEY }}
+          port: ${{ secrets.SSH_PORT }}
+          source: target/safenet.jar
+          target: /opt/safenet/safenet.jar
+
+      - name: Restart service
+        uses: appleboy/ssh-action@v1.2.0
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_KEY }}
+          script: |
+            sudo systemctl restart safenet
+            sudo systemctl status safenet --no-pager -n 20
