--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,16 +71,47 @@ jobs:
             set -e
             echo "APP_DIR (remote) = '$APP_DIR'"
             mkdir -p "$APP_DIR"
+            
 
-      - name: Copy JAR
-        uses: appleboy/scp-action@v0.1.7
+      - name: Place as app.jar + restart + health
+        uses: appleboy/ssh-action@v1.2.0
+        env:
+          JAR_PATH: ${{ steps.build.outputs.artifact }}
         with:
           host:     ${{ env.SSH_HOST }}
           username: ${{ env.SSH_USER }}
           key:      ${{ env.SSH_KEY }}
           port:     ${{ env.SSH_PORT }}
-          source:   ${{ steps.build.outputs.artifact }}
-          target:   ${{ env.APP_DIR }}
+          envs:     APP_DIR,SERVICE,HEALTH_URL,JAR_PATH
+          script: |
+            set -e
+      
+            jar_name=$(basename "$JAR_PATH")
+      
+            echo "Listing $APP_DIR before mv:"
+            ls -al "$APP_DIR"
+      
+            mv -f "$APP_DIR/$jar_name" "$APP_DIR/app.jar"
+            chmod 0644 "$APP_DIR/app.jar"
+      
+            sudo systemctl restart "$SERVICE"
+            sleep 2
+      
+            if command -v curl >/dev/null 2>&1; then
+              for i in $(seq 1 60); do
+                if curl -fsS "$HEALTH_URL" >/dev/null 2>&1; then
+                  echo "Health OK"
+                  exit 0
+                fi
+                sleep 1
+              done
+      
+              echo "Health check failed after 60s"
+              sudo systemctl status "$SERVICE" --no-pager -n 100 || true
+              sudo journalctl -u "$SERVICE" -n 200 --no-pager || true
+              exit 1
+            fi
+
 
       - name: Place as app.jar + restart + health
         uses: appleboy/ssh-action@v1.2.0
