--- a/backend/src/main/resources/application-dev.yaml
+++ b/backend/src/main/resources/application-dev.yaml
@@ -13,8 +13,8 @@ spring:
     oauth2:
       resourceserver:
         jwt:
-          issuer-uri: ${HOST}:8081/realms/safenet
-          jwk-set-uri: ${HOST}:8081/realms/safenet/protocol/openid-connect/certs
+          issuer-uri: ${HOST}/realms/safenet
+          jwk-set-uri: ${HOST}/realms/safenet/protocol/openid-connect/certs
 
 logging:
   level:
