--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -74,19 +74,19 @@ safenet:
       app-version: 1.0
       external-docs:
         - description: OpenID Provider Configuration
-          url: ${HOST}:8081/realms/safenet/.well-known/openid-configuration
+          url: ${HOST}/realms/safenet/.well-known/openid-configuration
 
     swagger-ui:
       oauth:
-        authorization-url: ${HOST}:8081/realms/safenet/protocol/openid-connect/auth
-        token-url: ${HOST}:8081/realms/safenet/protocol/openid-connect/token
+        authorization-url: ${HOST}/realms/safenet/protocol/openid-connect/auth
+        token-url: ${HOST}/realms/safenet/protocol/openid-connect/token
 
   # Security configuration
   security:
     https-only: false
     cors-allowed-origins:
-      - ${HOST}:8080
-      - ${HOST}:8081
+      - ${HOST}
+      - ${HOST}
 
 # Logging configuration
 logging:
