--- a/frontend/app.json
+++ b/frontend/app.json
@@ -32,15 +32,16 @@
         "foregroundImage": "./assets/images/android-icon-foreground.png",
         "backgroundImage": "./assets/images/android-icon-background.png"
       },
-
       "allowBackup": false,
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "googleServicesFile": "./google-services.json"
     },
     "web": {
       "favicon": "./assets/images/favicon.png",
       "bundler": "metro"
     },
     "plugins": [
+      "expo-notifications",
       "expo-localization",
       "expo-font",
       "expo-router",
