--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "expo-linking": "~8.0.8",
     "expo-localization": "~17.0.7",
     "expo-location": "~19.0.7",
+    "expo-notifications": "~0.32.12",
     "expo-router": "~6.0.10",
     "expo-secure-store": "~15.0.7",
     "expo-splash-screen": "~31.0.10",
@@ -45,6 +46,7 @@
     "react-error-boundary": "^6.0.0",
     "react-i18next": "^16.0.0",
     "react-native": "0.81.4",
+    "react-native-callkeep": "^4.3.16",
     "react-native-edge-to-edge": "^1.7.0",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-keyboard-controller": "^1.18.6",
